--- a/react-starter/package.json
+++ b/react-starter/package.json
@@ -24,6 +24,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "stream-to-array": "^2.3.0",
+    "viewerjs": "^0.7.1",
     "webpack-dev-server": "^2.5.1"
   }
 }
